[tool.poetry]
name = "quart-httpauth"
version = "0.1.0"
description = "QaurtHTTPAuth from FlaskHTTPAuth"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Quart = "^0.19.4"
quart-flask-patch = "^0.3.0"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
pytest = "^7.4.4"
tox = "^4.11.4"

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning", "ignore::PendingDeprecationWarning", "ignore::RuntimeWarning"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
