[project]
name = "quart-httpauth"
version = "0.1.0"
authors = [
    { name = "Your Name", email = "you@example.com" },
]
description = "QaurtHTTPAuth from FlaskHTTPAuth - HTTP authentication for Quart routes"
classifiers = [
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "Quart",
    "quart-flask-patch",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/your_username/quart-httpauth"
"Bug Tracker" = "https://github.com/your_username/quart-httpauth/issues"

[project.optional-dependencies]
docs = [
    "sphinx",
]

[tool.setuptools]
zip-safe = false
include-package-data = true
py-modules = [
    "quart_httpauth",
]

[tool.setuptools.package-dir]
"" = "src"

[build-system]
requires = [
    "setuptools>=61.2",
]
build-backend = "setuptools.build_meta"
